# dicom-phi-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: create_tcia_subset.py  smoke_test_midi.py
src/: api.py  cli.py  pixel_scanner.py  scanner.py
tests/: test_api.py  test_cli.py  test_pixel_scanner.py
